<resources>
    <string name="app_name">BenchPress</string>

    <!-- MainActivity. -->
    <string name="text">Какой Ваш максимум в жиме?</string>
    <string name="button">Начать</string>

    <!-- SecondActivity. -->
    <string name="title_activity_second">Жим лёжа</string>
    <string name="action_settings">Поделиться</string>
    <string name="action_info">Информация</string>

    <!-- Fragments. -->
    <string name="normal">Обычный</string>
    <string name="heavy">Дожимы</string>
    <string name="additional">Дополнительные упражнения:</string>
    <string name="other_back">
        1.Спина
        \n2.Бицепсы
        \n3.Задние дельты
    </string>
    <string name="other_back_simple">
        1.Спина
        \n2.Задние дельты
    </string>
    <string name="other_chest">Грудь</string>
    <string name="other_arms">
        1.Трицепсы
        \n2.Передние дельты
    </string>

    <!-- FinishDialogActivity. -->
    <string name="ok">OK</string>
    <string name="dialog_finish_title">Поздравляем!</string>
    <string name="dialog_finish_message">Вы завершили программу тренировок!</string>

    <!-- InfoActivity. -->
    <string name="information">Информация</string>
    <string name="info_title_1">Жимовая система "Стандарт"
        \nСуровецкого А.Е."</string>
    <string name="info_content_1">
        Программа рассчитана на 3 недели -
        \n9 тренировок.
        \n\nПодготовительные подходы желательно выполнять по типовой схеме:
        \n20 х 8, 38 х 7, 54 х 6, 68 х 5, 76 х 4, 84 х 3,
        \n92 х 2, 100 х 1.
        \n\nЭто общая схема. На тренировке выполняются только те подходы, которые идут до основного веса.
        \n\nНапример, если основной вес 72, то до него значит надо сделать:
        \n20 х 8, 38 х 7, 54 х 6, 68 х 5
        \n\nЭти подходы гарантируют качественную подготовку к основному весу и позволяют избегать серьёзных травм, если движения, конечно, выполняются без искажений техники.
        \n\nНикогда не надо на тренировках пытаться пожать как-нибудь, хоть "кровь из носу", только качественно.
        \n\nНе пошла штанга - ничего, это тренировка.
        \n\nИдти "ва-банк" можно только на соревнованиях.</string>
    <string name="info_title_2">Техника выполнения жима лёжа:</string>
    <string name="info_content_2">
        Шаг 1. Исходное положение: лежа на скамье. Возьмитесь за штангу широким хватом сверху (ладонями от себя), расстояние между кистями рук — шире плеч
        \n\nШаг 2. Снимите штангу со стоек
        \n\nШаг 3. Делая глубокий вдох, опустите гриф штанги к середине груди. Задержите дыхание и сильно выжмите штангу вверх на полностью выпрямленные руки на мощном выдохе.
        \n\nСтарайтесь опускать вес плавно, а поднимать в более быстрой манере. Обратите внимание, что ширина хвата должна быть такой, чтобы предплечья в нижней точке были перпендикулярны полу.
        \n\nРекомендую делать двухсекундную паузу в нижней точке амплитуды.</string>
    <string name="info_title_3">Техника выполнения дожимов:</string>
    <string name="info_content_3">
        Выполняется как обычный жим лежа, но до груди штанга не опускается.
        \n\nВ качестве ограничителя хода штанги удобнее всего использовать бруски высотой 9-12 см.
    </string>

</resources>
