<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.hfad.benchpress.InfoActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/info_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_title_1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/info_content_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_content_1"
                android:textSize="16sp"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/info_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_title_2"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/info_content_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_content_2"
                android:textSize="16sp"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/info_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_title_3"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/info_content_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_content_3"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>