<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.hfad.benchpress.SecondActivity$PlaceholderFragment">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="Тренировка 3"
            android:textSize="@dimen/fragment_title_size" />

        <TextView
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="1."
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/weight1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/num1"
            android:layout_alignBottom="@+id/num1"
            android:layout_alignStart="@+id/text1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="14dp"
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/weight1"
            android:layout_alignBottom="@+id/weight1"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/normal"
            android:textSize="@dimen/fragment_text_size" />


        <TextView
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/num1"
            android:layout_below="@+id/num1"
            android:text="2."
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/weight2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/weight1"
            android:layout_below="@+id/weight1"
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/type1"
            android:layout_below="@+id/type1"
            android:text="@string/normal"
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/num2"
            android:layout_below="@+id/num2"
            android:text="3."
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/weight3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/weight2"
            android:layout_below="@+id/weight2"
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/type3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/type2"
            android:layout_below="@+id/type2"
            android:text="@string/normal"
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/num3"
            android:layout_below="@+id/num3"
            android:text="4."
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/weight4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/weight3"
            android:layout_below="@+id/weight3"
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/type4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/type3"
            android:layout_below="@+id/type3"
            android:text="@string/normal"
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/num4"
            android:layout_below="@+id/num4"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/additional"
            android:textSize="@dimen/fragment_text_size" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text2"
            android:layout_below="@+id/text2"
            android:text="@string/other_chest"
            android:textSize="@dimen/fragment_other" />

    </RelativeLayout>
</ScrollView>